workshop04/gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fortune-gw

spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - fortuneapp.157.230.195.199.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortune-vs

spec:
  hosts:
  - "*"
  gateways:
  - fortune-gw
  http:
  - route:
    - destination:
        host: fortuneapp-svc.default.svc.cluster.local
