workshop04/weather-application-injected.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: weather-deployment
  name: weather-deployment
spec:
  selector:
    matchLabels:
      name: weather-pod
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"b5faac9e6b02231b7db3b29487392a395f1c85c746bf62dc8cb660444af6e0d9","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        name: weather-pod
        security.istio.io/tlsMode: istio
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: weather-configmap
        - secretRef:
            name: weather-secret
        image: stackupiss/weather:v1
        imagePullPolicy: IfNotPresent
        name: weather-container
        ports:
        - containerPort: 3000
          name: weather-port
        resources:
          requests:
            cpu: 100m
            memory: 16Mi
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - weather-deployment.default
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15010
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --proxyLogLevel=warning
        - --proxyComponentLogLevel=misc:error
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - NONE
        - --dnsRefreshRate
        - 300s
        - --statusPort
        - "15020"
        - --applicationPorts
        - "3000"
        - --trust-domain=cluster.local
        image: docker.io/istio/proxyv2:1.4.5
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 40Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1337
          runAsNonRoot: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  labels:
    name: weather-service
spec:
  type: ClusterIP
  selector:
    name: weather-pod
  ports:
    - port: 80
      targetPort: weather-port

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weather-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - name: weather-server
      port:
        name: http-port
        protocol: HTTP
        number: 80
      hosts:
        - weatherapp.157.230.193.70.nip.io

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-vs
spec:
  hosts:
    - "*"
  gateways:
    - weather-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: weather-service.default.svc.cluster.local
      rewrite:
        uri: /
    - match:
        - uri:
            prefix: /weather
      route:
        - destination:
            host: weather-service.default.svc.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: weather-egress
spec:
  hosts:
    - api.openweathermap.org
  ports:
    - number: 80
      protocol: HTTP
      name: http
    - number: 443
      protocol: HTTPS
      name: https
  location: MESH_EXTERNAL
  resolution: DNS
---
